# zeitro

./: .env.example  .env.production.example  .gitignore  CONTEXT.md  FUTURE.md  README.md  design.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: build-images.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  zeitro.db-shm  zeitro.db-wal
backend/alembic/: env.py
backend/alembic/versions/: 06b17f936a3f_initial_schema.py  4b8ada3e247f_add_habits.py  540b80fae260_add_theme_preference.py  d4c1c23768e2_add_task_notes.py
backend/app/: config.py  main.py
backend/app/auth/: schemas.py  users.py
backend/app/db/: engine.py
backend/app/models/: currency_transaction.py  habit.py  tag.py  task.py  user.py  work_session.py
backend/app/routers/: account.py  analytics.py  habits.py  sessions.py  stream.py  tags.py  tasks.py
backend/app/schemas/: currency.py  habit.py  tag.py  task.py  work_session.py
backend/app/services/: gamification.py  penalty_worker.py
backend/tests/: conftest.py  test_account.py  test_analytics.py  test_analytics_v2.py  test_auth.py  test_habits.py  test_penalties.py  test_pomodoro.py  test_sessions.py  test_tags.py  test_task_enhancements.py  test_tasks.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend-svelte/: Dockerfile  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend-svelte/src/: app.css  app.html  hooks.server.ts
frontend-svelte/src/lib/: api.ts  auth.ts
frontend/public/: manifest.json
frontend/src/: middleware.ts
(+39 files in other folders)
